tests/ui/missing_bits_for_unknown.stderr
error: missing #[bits(W)] for this field type
 --> tests/ui/missing_bits_for_unknown.rs:7:3
  |
7 |   a: Field,
  |   ^
